# api-abdo

./: .claudeignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  MIGRACION_OPTIMIZACION.md  PAYMENT_HISTORY_SERVER_FILTERS_PLAN.md  README.md  example.http  todo.md
.atl/: skill-registry.md
.claude/: settings.local.json
docs/: dashboard-monthly-closing-summary-contract.md  security-auth-ws-migration.md  wa-templates-api-spec.md  whatsapp-initiate-frontend-contract.md  ws-events.schema.json
docs/agent-tasks/: ai-agents-payments-routing-plan.md
openspec/: config.yaml
openspec/changes/2026-05-04-ai-agent-calculate-bs-tool/specs/ai-agent/: spec.md
openspec/changes/2026-05-04-ai-agent-conversation-state/: design.md  tasks.md
openspec/changes/2026-05-04-ai-agent-conversation-state/specs/ai-agent/: spec.md
openspec/changes/2026-05-04-ai-agent-phase3a-preclassifier-metrics/: design.md  proposal.md  tasks.md
openspec/changes/2026-05-04-ai-agent-phase3a-preclassifier-metrics/specs/ai-agent/: spec.md
openspec/changes/2026-05-04-ai-agent-report-payment-tool/: design.md  proposal.md
openspec/changes/2026-05-04-ai-agent-report-payment-tool/specs/ai-agent/: spec.md
openspec/changes/archive/2026-05-02-ai-agent-no-resolution-counter/: design.md  exploration.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-04-ai-agent-calculate-bs-tool/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-04-ai-agent-conversation-state/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-04-ai-agent-guardrails-and-hud/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-04-ai-agent-phase3a-preclassifier-metrics/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-04-ai-agent-report-payment-tool/: design.md  tasks.md
openspec/changes/archive/2026-06-08-modularize-whatsapp/: apply-progress.md  archive-report.md  design.md  proposal.md  tasks.md  verify-report.md
openspec/changes/modularize-whatsapp/: apply-progress.md  tasks.md
openspec/changes/whatsapp-chat-complete-media-hardening/: design.md  proposal.md  tasks.md
openspec/changes/whatsapp-chat-complete-media-hardening/specs/whatsapp-chat/: spec.md
openspec/specs/ai-agent/: spec.md
openspec/specs/whatsapp-chat/: spec.md
public/: privacy_policy.html
scripts/: backup_db.sh  create_indexes.js  migrate_coverage_zones.js  wa_migrate_reset.js
scripts/migrations/: 2026-05-06-ai-sales-phase2.js  2026-05-06-carla-system-prompt.js  2026-05-22-normalize-wa-unread-count.js  2026-06-16-fix-approved-payment-creation-dates.js  2026-06-16-payment-history-indexes.js
src/: axum_router.rs  config.rs  cron_bcv.rs  cron_mikrotik.rs  cron_zte.rs  error.rs  main.rs  openapi.rs  router.rs  state.rs
src/auth/: claims.rs  controller.rs  dto.rs  http_auth.rs  mod.rs  router.rs  service.rs  user_jwt.rs
src/cache/: mod.rs  redis_client.rs
src/crypto/: aes.rs  jwt.rs  jwt_verify.rs  mod.rs
src/data/: mod.rs  ve_political_divisions.rs
src/db/: mod.rs  mongo.rs
src/db/mongo/: ai_agent.rs  ai_config.rs  ai_installation.rs  ai_promotion.rs  auth.rs  mod.rs  onu.rs  profile.rs  sales.rs  users.rs  utils.rs  whatsapp.rs
src/domain/: customer.rs
src/handlers/: auth.rs  auth_user.rs  calculation.rs  clients.rs  dashboard.rs  mod.rs  onu.rs  payment.rs  profile.rs  receivable.rs  utils.rs  webhook.rs
src/http/: request.rs  response.rs  server.rs
src/middleware/: auth.rs  auth_user.rs  mod.rs  rate_limit.rs
src/models/: Zabbix.rs  ai_agent.rs  auth.rs  db.rs  mod.rs  onu.rs  payment.rs  profile.rs  receivable.rs  users.rs  whatsapp.rs  zabbix.rs
src/modules/: mod.rs
src/modules/ai_agent/: business_data.rs  config_resolver.rs  dispatch.rs  escalation.rs  gemini.rs  guardrails.rs  handler.rs  mod.rs  openrouter.rs  pre_classifier.rs  recovery.rs  reference_normalize.rs  runner.rs  sandbox.rs  seed.rs  state.rs  tools.rs
src/modules/api_utils/: handler.rs  mod.rs
src/modules/auth_client/: handler.rs  mod.rs
src/modules/auth_user/: handler.rs  mod.rs
src/modules/calculations/: handler.rs  mod.rs
src/modules/clients/: handler.rs  mod.rs
src/modules/dashboard/: handler.rs  mod.rs
src/modules/network/: mod.rs
src/modules/network/mikrotik/: cron.rs  ip_pppoe.rs  mod.rs  parser.rs  service.rs
src/modules/network/zte/: cron.rs  mod.rs  parser.rs  service.rs
src/modules/payments/: handler.rs  mod.rs  service.rs
src/modules/profile/: handler.rs  mod.rs
src/modules/providers/: handler.rs  mod.rs
src/modules/receivables/: handler.rs  mod.rs
src/modules/users/: handler.rs  mod.rs
src/modules/whatsapp/: assignment.rs  audit.rs  backfill.rs  handler.rs  mod.rs  quick_reply_validation.rs  service.rs  tickets.rs  url_preview.rs  ws.rs
src/modules/whatsapp/campaigns/: dto.rs  handler.rs  mod.rs  phone.rs  service.rs  template_resolver.rs  template_send_builder.rs
src/modules/whatsapp/conversations/: handlers.rs  lifecycle.rs  mod.rs  outbound.rs  queries.rs
src/modules/whatsapp/fixtures/: webhook_edit.json  webhook_errors.json  webhook_group.json  webhook_revoke.json
src/modules/whatsapp/messaging/: download.rs  media.rs  mod.rs  mode.rs  preview.rs  reactions.rs  send.rs
src/modules/whatsapp/quick_replies/: handlers.rs
src/modules/whatsapp/settings/: handlers.rs  mod.rs  validation.rs
src/modules/whatsapp/shared/: authz.rs  mappers.rs  mod.rs  response.rs  service.rs  time.rs  workspace.rs
src/modules/whatsapp/templates/: handlers.rs  header_media.rs  meta.rs  mod.rs
src/modules/whatsapp/webhook/: handler.rs  media_failures.rs  mod.rs  normalize.rs  status.rs
src/modules/zabbix/: service.rs
src/profile/: controller.rs  mod.rs  router.rs  structers.rs
src/services/: get_ip_pppoe_mk.rs  mikrotik_parse_update.rs  mikrotik_service.rs  mod.rs  zabbix_service.rs  zte_parse_update.rs  zte_service.rs
src/utils/: bcv_scraper.rs  get_bson_amount.rs  mod.rs  sms.rs  timezone.rs  whatsapp.rs
tools/cf-worker-media-relay/: worker.js  wrangler.toml
(+4 files in other folders)
