[package]
name = "api-abdo"
version = "0.2.0"
edition = "2021"

[dependencies]
# ============================================
# FRAMEWORK WEB
# ============================================
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["compression-full", "cors", "trace"] }
tower_governor = "0.3"
governor = "0.6"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1.39", features = ["full", "tracing"] }

# ============================================
# BASE DE DATOS
# ============================================
mongodb = "3.0.0"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# ============================================
# HTTP CLIENT
# ============================================
reqwest = { version = "0.11", features = ["json"] }

# ============================================
# SERIALIZACIÓN
# ============================================
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ============================================
# CRIPTOGRAFÍA
# ============================================
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.22"
hmac = "0.12.1"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }

# ============================================
# UTILIDADES
# ============================================
dotenvy = "0.15"
async-trait = "0.1"
futures = "0.3.31"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9.2"
time = "0.3"

# ============================================
# OBSERVABILIDAD
# ============================================
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# ============================================
# MANEJO DE ERRORES
# ============================================
thiserror = "1.0"
anyhow = "1.0"
