[package]
name = "api-abdo"
version = "0.2.0"
edition = "2021"

[dependencies]
# ============================================
# FRAMEWORK WEB
# ============================================
axum = { version = "0.7", features = ["macros", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.6", features = ["compression-full", "cors", "trace", "fs"] }
tower_governor = "0.3"
governor = "0.6"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1.39", features = ["full", "tracing"] }

# ============================================
# BASE DE DATOS
# ============================================
mongodb = "3.0.0"
redis = { version = "0.32.7", features = ["tokio-comp", "connection-manager"] }

# ============================================
# HTTP CLIENT
# ============================================
reqwest = { version = "0.12.24", features = ["json"] }

# ============================================
# SERIALIZACIÓN
# ============================================
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# ============================================
# CRIPTOGRAFÍA
# ============================================
aes-gcm = "0.10.3"
sha2 = "0.10.9"
base64 = "0.22.1"
hmac = "0.12.1"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }

# ============================================
# UTILIDADES
# ============================================
dotenvy = "0.15.7"
async-trait = "0.1.89"
futures = "0.3.31"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = "0.10.4"
rand = "0.9.2"
time = "0.3.44"

# ============================================
# OBSERVABILIDAD
# ============================================
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }

# ============================================
# MANEJO DE ERRORES
# ============================================
thiserror = "2.0.17"
anyhow = "1.0.100"
