[package]
name = "api-abdo"
version = "0.3.101"
edition = "2021"

[dependencies]
# ============================================
# FRAMEWORK WEB
# ============================================
axum = { version = "0.7", features = ["macros", "multipart", "ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
axum-client-ip = "0.6"
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.6", features = ["compression-full", "cors", "trace", "fs"] }
tower_governor = "0.3"
governor = "0.6"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1.39", features = ["full", "tracing"] }

# ============================================
# BASE DE DATOS
# ============================================
mongodb = "3.0.0"
redis = { version = "0.32.7", features = ["tokio-comp", "connection-manager"] }

# ============================================
# HTTP CLIENT
# ============================================
reqwest = { version = "0.12.24", features = ["json", "multipart"] }

# ============================================
# SERIALIZACIÓN
# ============================================
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# ============================================
# CRIPTOGRAFÍA
# ============================================
aes-gcm = "0.10.3"
sha2 = "0.10.9"
base64 = "0.22.1"
hmac = "0.12.1"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }

# ============================================
# UTILIDADES
# ============================================
dotenvy = "0.15.7"
async-trait = "0.1.89"
futures = "0.3.31"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = "0.10.4"
rand = "0.9.2"
time = "0.3.44"
ssh2 = "0.9.4"
regex = "1.10"

# ============================================
# OBSERVABILIDAD
# ============================================
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }

# ============================================
# MANEJO DE ERRORES
# ============================================
thiserror = "2.0.17"
anyhow = "1.0.100"
scraper = "0.25.0"
bcrypt = "0.18.0"

# ============================================
# DOCUMENTACIÓN (OpenAPI / Swagger)
# ============================================
utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }

# ============================================
# LINTS
# ============================================
# Pre-existing warnings in the codebase that require broader refactors
# outside the scope of the current change. Suppressed at project level
# to keep `cargo clippy -D warnings` green without touching business logic.
[lints.clippy]
# Structural / architectural (require broad refactor)
too_many_arguments = "allow"       # Several handlers have >7 params by design
result_large_err = "allow"         # ApiError is intentionally large; boxing would change every callsite
type_complexity = "allow"          # Complex async return types in trait impls
# Mechanical but cross-cutting (safe to suppress; refactor can be done incrementally)
redundant_closure = "allow"        # map_err(|e| Foo(e)) vs map_err(Foo) — style preference
redundant_locals = "allow"         # Pre-existing reassignment patterns
needless_borrow = "allow"          # &ref auto-deref patterns in existing code
needless_borrows_for_generic_args = "allow"  # &format!() where format!() suffices
manual_range_contains = "allow"    # x >= a && x <= b patterns
manual_contains = "allow"          # .iter().any(|x| x == val) patterns
manual_clamp = "allow"             # .min(max).max(min) patterns
manual_map = "allow"               # if-let Option patterns
manual_is_multiple_of = "allow"    # % n == 0 patterns
collapsible_else_if = "allow"      # else { if ... } blocks
collapsible_if = "allow"           # nested if blocks
collapsible_str_replace = "allow"  # consecutive .replace() calls
if_same_then_else = "allow"        # duplicate if/else branches
double_ended_iterator_last = "allow" # .last() on DoubleEndedIterator
while_let_on_iterator = "allow"    # while let Some = iter.next()
bind_instead_of_map = "allow"      # and_then patterns
clone_on_copy = "allow"            # .clone() on Copy types
cloned_ref_to_slice_refs = "allow" # .cloned() on &[&T]
derivable_impls = "allow"          # manual Default impl where derive works
field_reassign_with_default = "allow" # let mut x = Default::default(); x.field = ...
empty_line_after_doc_comments = "allow" # blank lines after /// doc comments
doc_lazy_continuation = "allow"    # doc comment formatting
upper_case_acronyms = "allow"      # USD, BSON etc. naming
unnecessary_map_or = "allow"       # .map_or(false, |x| ...) vs .is_some_and
unwrap_or_default = "allow"        # .unwrap_or_else(Default::default)
neg_cmp_op_on_partial_ord = "allow" # !(a > b) on f32
